added search function

--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -406,7 +406,7 @@ using [*UQ Search*](https://www.uq.edu.au/search).
       </nav>
       <div class="uq-header__search" data-gtm-category="Search">
         <div class="uq-header__search-container">
-          <form>
+          <form action="https://www.uq.edu.au/search/" method="get">
             <fieldset>
               <div class="uq-header__search-query">
                 <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
