--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -391,7 +391,7 @@ using [*UQ Search*](https://www.uq.edu.au/search).
               <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">News</a>
           </li>
           <li class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-              <a href="https://www.uq.ed.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
+              <a href="https://www.uq.edu.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
           </li>
           <li class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
               <a href="https://alumni.uq.edu.au/giving" class="uq-header__nav-secondary-link">Give</a>
@@ -425,7 +425,7 @@ using [*UQ Search*](https://www.uq.edu.au/search).
                   <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">News</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                  <a href="https://www.uq.ed.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
+                  <a href="https://www.uq.edu.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
               </li>
               <li class="uq-header__nav-secondary-item">
                   <a href="https://alumni.uq.edu.au/giving" class="uq-header__nav-secondary-link">Give</a>
