Fixed spelling of support

--- a/packages/storybook-html/src/components/footer/footer.docs.mdx
+++ b/packages/storybook-html/src/components/footer/footer.docs.mdx
@@ -52,10 +52,10 @@ The global footer provides a consistent branding and navigational element across
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff Supoort</a>
+                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT Supoort for staff</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
                 </li>
               </ul>
             </li>
@@ -75,7 +75,7 @@ The global footer provides a consistent branding and navigational element across
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT Supoort for students</a>
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
                 </li>
               </ul>
             </li>
@@ -140,10 +140,10 @@ The global footer provides a consistent branding and navigational element across
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff Supoort</a>
+                  <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT Supoort for staff</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
                 </li>
               </ul>
             </li>
@@ -163,7 +163,7 @@ The global footer provides a consistent branding and navigational element across
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT Supoort for students</a>
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
                 </li>
               </ul>
             </li>
@@ -271,10 +271,10 @@ The global footer provides a consistent branding and navigational element across
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff supoort</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT supoort for staff</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
                 </li>
               </ul>
             </li>
@@ -294,7 +294,7 @@ The global footer provides a consistent branding and navigational element across
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT supoort for students</a>
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
                 </li>
               </ul>
             </li>
@@ -368,10 +368,10 @@ The global footer provides a consistent branding and navigational element across
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff supoort</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT supoort for staff</a>
+                  <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
                 </li>
               </ul>
             </li>
@@ -391,7 +391,7 @@ The global footer provides a consistent branding and navigational element across
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT supoort for students</a>
+                  <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
                 </li>
               </ul>
             </li>
