Remove rogue data-gtm-cat

--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -228,7 +228,7 @@ using [*UQ Search*](https://www.uq.edu.au/search).
           </button>
         </div>
       </div>
-      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"  data-gtm-category="Header navigation mobile"  aria-label="primary navigation mobile">
+      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"   aria-label="primary navigation mobile">
         <ul>
           <li class="uq-header__newglobal-nav-item" data-gtm-category="Primary header">
             <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
