--- a/packages/storybook-html/src/components/alert/alert.docs.mdx
+++ b/packages/storybook-html/src/components/alert/alert.docs.mdx
@@ -328,8 +328,8 @@ new Alerts(document.getElementById("global-alerts-container"));
         <code>$uq-alert</code> <code>$uq-alert--info</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        • Info message (Important but neither positive nor negative) <br />• Used
-        on page or in page components
+        • Info message (Important but neither positive nor negative) <br />•
+        Used on page or in page components
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -400,8 +400,7 @@ new Alerts(document.getElementById("global-alerts-container"));
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         • Global info message (neither positive nor negative) <br />
-        • Used as a global message towards the top of the page <br />•
-        Dismissable
+        • Used as a global message towards the top of the page <br />• Dismissable
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -417,8 +416,7 @@ new Alerts(document.getElementById("global-alerts-container"));
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         • Global success message <br />
-        • Used as a global message towards the top of the page <br />•
-        Dismissable
+        • Used as a global message towards the top of the page <br />• Dismissable
       </td>
     </tr>
     <tr className="uqds-table__row">
