--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-4-search-combo.docs.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-4-search-combo.docs.mdx
@@ -95,8 +95,7 @@ list items.
     </strong>{" "}
     (remain at the top even when scrolling)—with the first search result
     initially positioned relative to the search field's height—
-    <strong>using CSS and HTML alone</strong>. Implement a JavaScript solution
-    to this problem to improve the user experience. Watch this space for a
-    working demo.
+    <strong>using CSS and HTML alone</strong>. Implement a JavaScript solution to
+    this problem to improve the user experience. Watch this space for a working demo.
   </div>
 </div>
