--- a/packages/storybook-html/src/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/get-started.story.mdx
@@ -17,9 +17,9 @@ import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
       <a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw">
         environment setup instructions
       </a>
-      . If you do not have access,{" "}
-      <a href="mailto:webservices@uq.edu.au">contact us</a> and we can package
-      up styles and components for you to use in your project.
+      . If you do not have access, <a href="mailto:webservices@uq.edu.au">
+        contact us
+      </a> and we can package up styles and components for you to use in your project.
     </p>
   </div>
 </div>
