Updated docs reference

--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas, Preview } from '@storybook/addon-docs';
 import './_typography.scss';
 
 <Meta title="Core/Typography" />
