--- a/packages/storybook-html/src/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/src/docs/layout/layout.story.mdx
@@ -1,5 +1,5 @@
 import './layout.scss';
-import { Meta, Story } from '@storybook/addon-docs/blocks';
+import { Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Layout/Layout system" parameters={{ layout: "fullscreen", docs: { inlineStories: false } }} />
 
