--- a/packages/storybook-html/src/components/core/colour-base.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-base.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Preview } from '@storybook/addon-docs';
 import './_colour.scss';
 
 <Meta title="Core/Colour/Base colour palette" />
