--- a/packages/storybook-html/src/patterns/form-validation/form-validation.story.mdx
+++ b/packages/storybook-html/src/patterns/form-validation/form-validation.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs';
 import { useEffect } from '@storybook/client-api';
 import baddestForm from './form-errors-kitchen-sink.html';
 import passwordResetHTML from './examples/password-reset.html';
