--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -66,7 +66,7 @@ You can optionally provide two radio fields, allowing users to choose to search 
   <label for="edit-as_sitesearch-off" class="option uq-header__search-label">Search all UQ websites</label>
 </div>
 <div class="uq-header__search-range">
-  <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="form-radio uq-header__search-radio">
+  <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au" checked="checked" class="form-radio uq-header__search-radio">
   <label for="edit-as_sitesearch-on" class="option uq-header__search-label">Search this website (future-students.uq.edu.au)</label>
 </div>
 ```
