updated space variable name and references

--- a/packages/storybook-html/stories/components/core/space.story.mdx
+++ b/packages/storybook-html/stories/components/core/space.story.mdx
@@ -270,11 +270,11 @@ Applies padding to containers
     <td>Container</td>
     <td>
       <div className="uqds-container uqds-container-space">
-        <code>$space;</code>
+        <code>$space-xxxxxl;</code>
       </div>
     </td>
     <td>
-      <code>padding:$space;</code>
+      <code>padding:$space-xxxxxl;</code>
       <ul>
         <li>For all user interface containers.</li>
         <li>Apply padding equally on all sides.</li>
@@ -285,11 +285,11 @@ Applies padding to containers
     <td>Container size</td>
     <td>
       <div className="uqds-container uqds-container-space-lg">
-        <code>$space-l;</code>
+        <code>$space-xxxxxl;</code>
       </div>
     </td>
     <td>
-      <code>padding:$space-l;</code>
+      <code>padding:$space-xxxxxl;</code>
       <ul>
         <li>adjust space using available space scale variables</li>
         <li>Space increments are used to control the density</li>
@@ -300,11 +300,11 @@ Applies padding to containers
     <td>Compressed</td>
     <td>
       <div className="uqds-container uqds-compressed-space-lg">
-        <code>$space-compressed-l $space-l;</code>
+        <code>$space-compressed-l $space-xxxxxl;</code>
       </div>
     </td>
     <td>
-      <code>paddding:$space-compressed-l $space-l;</code>
+      <code>paddding:$space-compressed-l $space-xxxxxl;</code>
       <ul>
         <li>Reduces the top and bottom padding</li>
         <li>Creates better spacing balance for cell-like containers</li>
@@ -319,11 +319,11 @@ Applies padding to containers
     <td>Stretched</td>
     <td>
       <div className="uqds-container uqds-stretched-space">
-        <code>$space-stretched $space;</code>
+        <code>$space-stretched $space-xxxxxl;</code>
       </div>
     </td>
     <td>
-      <code>paddding:$space-stretched $space;</code>
+      <code>paddding:$space-stretched $space-xxxxxl;</code>
       <ul>
         <li>increases the top and bottom padding</li>
         <li>Creates better spacing balance for long or stretched objects</li>
@@ -351,21 +351,21 @@ Stacks content vertically, applying top margin.
     <td>
       <div className="uqds-container">
         <div className="uqds-stacked-space">
-          <code>$space;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-stacked-space">
-          <code>$space;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-stacked-space">
-          <code>$space;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-stacked-space">
-          <code>$space;</code>
+          <code>$space-xxxxxl;</code>
         </div>
       </div>
     </td>
     <td>
-      <code>padding:$space;</code>
+      <code>padding:$space-xxxxxl;</code>
       <ul>
         <li>For all content when vertically stacking</li>
         <li>Apply top margin to content</li>
@@ -402,16 +402,16 @@ Stacks content vertically, applying top margin.
     <td>
       <div className="uqds-container">
         <div className="uqds-stacked-space-lg">
-          <code>$space-l;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-stacked-space-lg">
-          <code>$space-l;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-stacked-space-lg">
-          <code>$space-l;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-stacked-space-lg">
-          <code>$space-l;</code>
+          <code>$space-xxxxxl;</code>
         </div>
       </div>
     </td>
@@ -441,21 +441,21 @@ Arrange objects inline horizontally, applying right margin.
     <td>
       <div className="uqds-container">
         <div className="uqds-inline-space">
-          <code>$space;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-inline-space">
-          <code>$space;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-inline-space">
-          <code>$space;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-inline-space">
-          <code>$space;</code>
+          <code>$space-xxxxxl;</code>
         </div>
       </div>
     </td>
     <td>
-      <code>padding:$space;</code>
+      <code>padding:$space-xxxxxl;</code>
       <ul>
         <li>For all content when spacing inline horizontally</li>
         <li>Apply right margin to content</li>
@@ -492,16 +492,16 @@ Arrange objects inline horizontally, applying right margin.
     <td>
       <div className="uqds-container">
         <div className="uqds-inline-space-lg">
-          <code>$space-l;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-inline-space-lg">
-          <code>$space-l;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-inline-space-lg">
-          <code>$space-l;</code>
+          <code>$space-xxxxxl;</code>
         </div>
         <div className="uqds-inline-space-lg">
-          <code>$space-l;</code>
+          <code>$space-xxxxxl;</code>
         </div>
       </div>
     </td>
