interated over library updating variable names to reflect new values

--- a/packages/storybook-html/stories/components/core/breakpoints.story.mdx
+++ b/packages/storybook-html/stories/components/core/breakpoints.story.mdx
@@ -38,7 +38,7 @@ example:
 .example-class {
   // Target the zero (mobile) breakpoint & up
   font-size: core.$font-size-s;
-  padding: core.$space;
+  padding: core.$space-m;
   text-align: center;
 }
 
