--- a/packages/storybook-html/stories/components/site-header/site-header.docs.mdx
+++ b/packages/storybook-html/stories/components/site-header/site-header.docs.mdx
@@ -24,95 +24,56 @@ The site header component is comprised of the site title, the site navigation, a
 
 A site header with a site title, a site utility, and a two-level site navigation.
 
-<Canvas withSource="none" withToolbar>
+<Canvas withToolbar>
   <Story height={505} id="components-site-header--site-header-with-subnav" />
 </Canvas>
 
-```html
-<div class="uq-site-header">
-  <!-- Site title and utility with mobile nav toggler (JS) -->
-  <div class="uq-site-header__title-container">
-    <div class="uq-site-header__title-container__left">
-      <a href="/" class="uq-site-header__title">Site title</a>
-    </div>
-    <div class="uq-site-header__title-container__right">
-      <div>[Site utilities go here]</div>
-      <button class="uq-site-header__navigation-toggle jsNavToggle">
-        Menu
-      </button>
-    </div>
-  </div>
+#### Usage
 
-  <!-- Navigation menu  -->
-  <div class="uq-site-header__navigation-container">
-    <nav
-      class="uq-site-header__navigation"
-      aria-label="Site navigation"
-      id="jsNav"
-    >
-      <ul
-        class="uq-site-header__navigation__list uq-site-header__navigation__list--level-1"
-      >
-        <li
-          class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav uq-site-header__navigation__list-item--active"
-        >
-          <a href="/" aria-haspopup="true" aria-expanded="false"
-            >Navigation list item</a
-          >
-          <button class="uq-site-header__navigation__sub-toggle">
-            <span class="visually-hidden"
-              >Show Navigation list item sub-navigation</span
-            >
-          </button>
-          <ul
-            class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2"
-            aria-label="Navigation list item sub-navigation"
-          >
-            <li class="uq-site-header__navigation__list-item">
-              <a href="/">Sub-navigation list item</a>
-            </li>
-            ...
-          </ul>
-        </li>
-        ...
-      </ul>
-    </nav>
-  </div>
-</div>
+Use JavaScript to initialize the component to ensure it will work as expected.
+
+```js
+// Initialise Main Navigation
+  const navElem = document.getElementById("jsNav"); if (navElem) { new uq.siteHeaderNavigation(navElem, "uq-site-header__navigation"); }  
+```
+Slider mobile menu 
+
+```js
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const menuLeftElem = document.getElementById('global-mobile-nav');
+
+        const menuLeft = new SlideMenu(menuLeftElem, {
+          position: 'left',
+          submenuLinkAfter: ' ',
+          backLinkBefore: ' ',
+        });
+
+        this.searchToggle = document.querySelector('.nav-primary__search-toggle');
+
+        this.searchToggle.addEventListener('click', () => {
+          menuLeft.close();
+        });
+
+        var slideMenuBackButtons = document.querySelectorAll('.slide-menu__backlink, .global-mobile-nav__audience-link');
+                
+        Array.prototype.forEach.call(slideMenuBackButtons, function(el, i){
+            el.addEventListener('click', () => {
+              document.querySelector('.global-mobile-nav').scrollTop = 0;
+            });
+        });
+      });
+    </script>
+    <script type="text/javascript" src="js/slide-menu.js"></script>
 ```
 
 ### Without sub-navigation
 
 A site header with site title and a one-level site navigation.
 
-<Canvas withSource="none" withToolbar>
+<Canvas withToolbar>
   <Story height={200} id="components-site-header--site-header-without-subnav" />
 </Canvas>
-
-```html
-<div class="uq-site-header">
-  <!-- Site title with mobile nav toggler (JS) -->
-  <div class="uq-site-header__title-container">
-    <div class="uq-site-header__title-container__left">
-      <a href="/" class="uq-site-header__title">Site title</a>
-    </div>
-    <div class="uq-site-header__title-container__right">
-      <button class="uq-site-header__navigation-toggle jsNavToggle">Menu</button>
-    </div>
-  </div>
-
-  <!-- Navigation menu  -->
-  <div class="uq-site-header__navigation-container">
-    <nav class="uq-site-header__navigation" aria-label="Site navigation"  id="jsNav">
-      <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-1">
-        <li class="uq-site-header__navigation__list-item">
-          <a href="/">Navigation list item</a>
-        </li>
-        ...
-    </nav>
-  </div>
-</div>
-```
 
 ## Variants
 
