--- a/packages/storybook-html/stories/components/header/header.docs.mdx
+++ b/packages/storybook-html/stories/components/header/header.docs.mdx
@@ -41,16 +41,16 @@ Currently reserved for the UQ Homepage and level one landing pages for Study, Re
 Use JavaScript to initialize the component to ensure it will work as expected.
 
 ```js
-  // Initialise header
-  const headerElem = document.querySelector('.uq-header');
-  new uq.header(headerElem);
+// Initialise header
+const headerElem = document.querySelector(".uq-header");
+new uq.header(headerElem);
 
-  const appHeight = () => {
-    const doc = document.documentElement
-    doc.style.setProperty('--app-height', `${window.innerHeight}px`)
-    }
-  window.addEventListener('resize', appHeight)
-  appHeight()
+const appHeight = () => {
+  const doc = document.documentElement;
+  doc.style.setProperty("--app-height", `${window.innerHeight}px`);
+};
+window.addEventListener("resize", appHeight);
+appHeight();
 ```
 
 ## Variant examples
