--- a/packages/storybook-html/stories/components/footer/footer.docs.mdx
+++ b/packages/storybook-html/stories/components/footer/footer.docs.mdx
@@ -40,23 +40,38 @@ When implementation of the full footer is not possible, a simplified approach us
 ## Figma Frame example
 
 ### Top level "footer" Frame
+
 <Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3853%3A2028" />
 
 #### Child "Footer" frame
+
 <Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3854%3A2755&t=ubTZjGrFsDbBwKVu-4" />
 
 #### Sub child "standard, large" frame
+
 <Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3853%3A2229&t=ubTZjGrFsDbBwKVu-4" />
 
+### Footer/Large
 
-### Footer/Large 
 <Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3853%3A2121&t=ubTZjGrFsDbBwKVu-4" />
 
 ### Hidden by default
-<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3853%3A2121&t=ubTZjGrFsDbBwKVu-4" defaultCollapsed />
 
-### Page link 
-<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3853%3A2027&t=P7WeJ5biv6G4DWBZ-1" defaultCollapsed />
+<Figma
+  url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3853%3A2121&t=ubTZjGrFsDbBwKVu-4"
+  defaultCollapsed
+/>
+
+### Page link
+
+<Figma
+  url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3853%3A2027&t=P7WeJ5biv6G4DWBZ-1"
+  defaultCollapsed
+/>
 
 ### File link -
-<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library" defaultCollapsed />
+
+<Figma
+  url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library"
+  defaultCollapsed
+/>
