Added new example

--- a/packages/storybook-html/stories/components/footer/footer.docs.mdx
+++ b/packages/storybook-html/stories/components/footer/footer.docs.mdx
@@ -75,3 +75,8 @@ When implementation of the full footer is not possible, a simplified approach us
   url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library"
   defaultCollapsed
 />
+
+### Footer Mobile test
+
+<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3853%3A2191&t=bZsV00VyblBLlo5U-4" />
+
