--- a/packages/storybook-html/stories/components/footer/footer.docs.mdx
+++ b/packages/storybook-html/stories/components/footer/footer.docs.mdx
@@ -55,6 +55,13 @@ When implementation of the full footer is not possible, a simplified approach us
 
 <Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=3853%3A2121&t=ubTZjGrFsDbBwKVu-4" />
 
+### Instance Footer/Large
+<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=5613%3A3786&t=VaMBPL2PnFzXVush-4" />
+
+### Second Instance Footer/Large
+<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-uq-component-library?node-id=5613%3A3787&t=VaMBPL2PnFzXVush-4" />
+
+
 ### Hidden by default
 
 <Figma
