iterate through ds updating variable labels

--- a/packages/storybook-html/stories/components/core/breakpoints.story.mdx
+++ b/packages/storybook-html/stories/components/core/breakpoints.story.mdx
@@ -45,14 +45,14 @@ example:
 @media #{core.$screen-md-up} {
   .example-class {
     // Target the MD (tablet) breakpoint & up
-    font-size: core.$font-size;
+    font-size: core.$font-size-m;
   }
 }
 
 @media #{core.$screen-xl-up} {
   .example-class {
     // Target the XL (desktop) breakpoint & up
-    font-size: core.$font-size-m;
+    font-size: core.$font-size-l;
   }
 }
 ```
