--- a/packages/storybook-html/stories/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/stories/docs/introduction/get-started.story.mdx
@@ -84,7 +84,7 @@ your Sass files. For example,
 @use "@uqds/core/src/scss/global" as *;
 
 .example-class {
-  font-size: core.$font-size-xl;
+  font-size: core.$font-size-xxl;
 }
 ```
 
