--- a/packages/storybook-html/stories/components/core/typography.story.mdx
+++ b/packages/storybook-html/stories/components/core/typography.story.mdx
@@ -141,32 +141,32 @@ export const Sizes = () => `
     <tr>
       <td>16</td>
       <td>1</td>
-      <td><code>$font-size</code></td>
+      <td><code>$font-size-m</code></td>
     </tr>
     <tr>
       <td>18</td>
       <td>1.125</td>
-      <td><code>$font-size-m</code></td>
+      <td><code>$font-size-l</code></td>
     </tr>
     <tr>
       <td>20</td>
       <td>1.25</td>
-      <td><code>$font-size-l</code></td>
+      <td><code>$font-size-xl</code></td>
     </tr>
     <tr>
       <td>24</td>
       <td>1.5</td>
-      <td><code>$font-size-xl</code></td>
+      <td><code>$font-size-xxl</code></td>
     </tr>
     <tr>
       <td>32</td>
       <td>2</td>
-      <td><code>$font-size-xxl</code></td>
+      <td><code>$font-size-xxxl</code></td>
     </tr>
     <tr>
       <td>40</td>
       <td>2.5</td>
-      <td><code>$font-size-xxxl</code></td>
+      <td><code>$font-size-xxxxl</code></td>
     </tr>
   </tbody>
 </table>
@@ -196,7 +196,7 @@ export const Styles = () => `
       <td className="uqds-table__item">H1</td>
       <td className="uqds-table__item" data-title="Font:">Montserrat</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-xxxl</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-xxxxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td> 
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h1>This is a H1 heading</h1></td> 
@@ -205,7 +205,7 @@ export const Styles = () => `
       <td className="uqds-table__item">H2</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-xxl</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-xxxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h2>This is a H2 heading</h2></td> 
@@ -214,7 +214,7 @@ export const Styles = () => `
       <td className="uqds-table__item">H3</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-xl</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-xxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h3>This is a H3 heading</h3></td> 
@@ -223,7 +223,7 @@ export const Styles = () => `
       <td className="uqds-table__item">H4</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-xl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h4>This is a H4 heading</h4></td> 
@@ -232,7 +232,7 @@ export const Styles = () => `
       <td className="uqds-table__item">H5</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h5>This is a H5 heading</h5></td> 
@@ -241,7 +241,7 @@ export const Styles = () => `
       <td className="uqds-table__item">H6</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h6>This is a H6 heading</h6></td> 
