--- a/packages/storybook-html/stories/components/core/typography.story.mdx
+++ b/packages/storybook-html/stories/components/core/typography.story.mdx
@@ -259,7 +259,7 @@ export const Styles = () => `
       <td className="uqds-table__item">Paragraph</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Colour:">$text</td>
       <td className="uqds-table__item" data-title="Example"><p>This is paragraph text</p></td> 
@@ -286,7 +286,7 @@ export const Styles = () => `
       <td className="uqds-table__item">Link</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Colour:">$link</td>
       <td className="uqds-table__item" data-title="Example"><a href="">This is a link</a></td> 
@@ -295,7 +295,7 @@ export const Styles = () => `
       <td className="uqds-table__item">Ordered list</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Colour:">$text</td>
       <td className="uqds-table__item" data-title="Example"><ol><li>This is an ordered list item</li></ol></td> 
@@ -304,7 +304,7 @@ export const Styles = () => `
       <td className="uqds-table__item">Unordered list</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Colour:">$text</td>
       <td className="uqds-table__item" data-title="Example"><ul><li>This is an unordered list item</li></ul></td> 
