--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -27,48 +27,23 @@ Displays a list of links indicating the page levels before the current page. The
 </Canvas>
 
 ```html
-<nav aria-label="uq-breadcrumb">
-  <ol
-    class="uq-breadcrumb"
-    itemscope=""
-    itemtype="https://schema.org/BreadcrumbList"
-  >
-    <li
-      class="uq-breadcrumb__item uq-breadcrumb__item--home"
-      itemprop="itemListElement"
-      itemscope=""
-      itemtype="https://schema.org/ListItem"
-    >
-      <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
-      <meta itemprop="position" content="1" />
+<nav class="uq-breadcrumb" aria-label="breadcrumb">
+  <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
+    <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+      <a class="uq-breadcrumb__link uq-breadcrumb__link--home" title="Home" href="/">Home</a>
+      <meta itemprop="position" content="1">
     </li>
-    <li
-      class="uq-breadcrumb__item"
-      itemprop="itemListElement"
-      itemscope=""
-      itemtype="https://schema.org/ListItem"
-    >
-      <a
-        class="uq-breadcrumb__link"
-        itemprop="item"
-        href="/information-and-services"
-        >Information and services</a
-      >
-      <meta itemprop="position" content="2" />
+    <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+      <a class="uq-breadcrumb__link" itemprop="item" title="Level one" href="/level-one">Level one</a>
+      <meta itemprop="position" content="2">
     </li>
-    <li
-      class="uq-breadcrumb__item"
-      itemprop="itemListElement"
-      itemscope=""
-      itemtype="https://schema.org/ListItem"
-    >
-      <a
-        class="uq-breadcrumb__link"
-        itemprop="item"
-        href="/information-and-services/internet-and-wifi"
-        >Internet and wifi</a
-      >
-      <meta itemprop="position" content="3" />
+    <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+      <a class="uq-breadcrumb__link" itemprop="item" title="Level two" href="/level-one/level-two">Level two</a>
+      <meta itemprop="position" content="3">
+    </li>
+    <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+      Current page
+      <meta itemprop="position" content="4">
     </li>
   </ol>
 </nav>
@@ -76,7 +51,7 @@ Displays a list of links indicating the page levels before the current page. The
 
 ### Truncation
 
-The breadcrumb link text is truncated and ellipsed (...) when the text is longer than a set width.
+The breadcrumb link text is truncated and ellipsed (...) when the text is longer than a set width, with the current page being the exception. Additionally, a maximum of 4 breadcrumbs will be shown. When exceeding this - the home, parent and current page will be shown with the others collapsed behind an expand button.
 
 <Canvas withSource="none">
   <Story id="components-breadcrumb--breadcrumb-truncation" />
