optimize javascript. clean up html to remove redundant classes

--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -29,8 +29,8 @@ Displays a list of links indicating the page levels before the current page. The
 ```html
 <nav class="uq-breadcrumb" aria-label="breadcrumb">
   <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
-    <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-      <a class="uq-breadcrumb__link uq-breadcrumb__link--home" title="Home" href="/">Home</a>
+    <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+      <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
       <meta itemprop="position" content="1">
     </li>
     <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
