--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -39,12 +39,7 @@ Displays a list of links indicating the page levels before the current page. The
       itemscope=""
       itemtype="https://schema.org/ListItem"
     >
-      <a
-        class="uq-breadcrumb__link"
-        title="Home"
-        href="/"
-        >Home</a
-      >
+      <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
       <meta itemprop="position" content="1" />
     </li>
     <li
