--- a/packages/storybook-html/stories/components/core/typography.story.mdx
+++ b/packages/storybook-html/stories/components/core/typography.story.mdx
@@ -151,6 +151,11 @@ export const Sizes = () => `
       <td>2.5</td>
       <td><code>$font-size-xxxxl</code></td>
     </tr>
+    <tr>
+      <td>48</td>
+      <td>3</td>
+      <td><code>$font-size-ul</code></td>
+    </tr>
   </tbody>
 </table>
 `;
@@ -180,7 +185,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Font:">Montserrat</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxxxl</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td> 
+      <td className="uqds-table__item" data-title="Line-height:">1.2</td> 
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h1>This is a H1 heading</h1></td> 
     </tr>
@@ -189,7 +194,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxxl</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
+      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h2>This is a H2 heading</h2></td> 
     </tr>
@@ -198,7 +203,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxl</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
+      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h3>This is a H3 heading</h3></td> 
     </tr>
@@ -207,7 +212,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xl</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
+      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h4>This is a H4 heading</h4></td> 
     </tr>
@@ -216,7 +221,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
+      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h5>This is a H5 heading</h5></td> 
     </tr>
@@ -225,7 +230,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
+      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h6>This is a H6 heading</h6></td> 
     </tr>
@@ -304,7 +309,7 @@ export const Styles = () => `
     <tr className="uqds-table__row">
       <td className="uqds-table__item">Blockquote</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular italic, 400</td>
+      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Colour:">$text</td>
