update font ref

--- a/packages/storybook-html/stories/components/core/breakpoints.story.mdx
+++ b/packages/storybook-html/stories/components/core/breakpoints.story.mdx
@@ -45,7 +45,7 @@ example:
 @media #{core.$screen-md-up} {
   .example-class {
     // Target the MD (tablet) breakpoint & up
-    font-size: core.$font-size;
+    font-size: core.$font-size-m;
   }
 }
 
