breadcrumb doco updates from cx feedback

--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -22,7 +22,7 @@ Breadcrumbs are a horizontal list of links used to indicate the current page loc
 
 Displays a list of links indicating the page levels before the current page. The current page is not included and a chevron icon is displayed between the page levels when there are more than two page levels in the list.
 
-<Canvas withSource="none">
+<Canvas withSource="none" withToolbar>
   <Story id="components-breadcrumb--breadcrumb" />
 </Canvas>
 
@@ -89,7 +89,7 @@ Displays a list of links indicating the page levels before the current page. The
 
 The breadcrumb link text is truncated and ellipsed (...) when the text is longer than a set width, with the current page being the exception. Additionally, a maximum of 4 breadcrumbs will be shown. When exceeding this - the home, parent and current page will be shown with the others collapsed behind an expand button.
 
-<Canvas withSource="none">
+<Canvas withSource="none" withToolbar>
   <Story id="components-breadcrumb--breadcrumb-truncation" />
 </Canvas>
 
