--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -20,7 +20,7 @@ Breadcrumbs are a horizontal list of links used to indicate the current page loc
 
 ## Default
 
-Displays a list of links indicating the page levels before the current page. The current page is not included and a chevron icon is displayed between the page levels when there are more than two page levels in the list.
+Displays a list of links indicating the page levels before the current page.
 
 <Canvas withSource="none" withToolbar>
   <Story id="components-breadcrumb--breadcrumb" />
@@ -87,7 +87,7 @@ Displays a list of links indicating the page levels before the current page. The
 
 ### Truncation
 
-The breadcrumb link text is truncated and ellipsed (...) when the text is longer than a set width, with the current page being the exception. Additionally, a maximum of 4 breadcrumbs will be shown. When exceeding this - the home, parent and current page will be shown with the others collapsed behind an expand button.
+Breadcrumb link text is truncated and ellipsed (...) when the text is longer than a set width, with the current page being the exception. Additionally, a maximum of 4 breadcrumbs will be shown. When exceeding this - the home, parent, parent's parent and current page will be shown with the others collapsed behind an expand button.
 
 <Canvas withSource="none" withToolbar>
   <Story id="components-breadcrumb--breadcrumb-truncation" />
@@ -97,7 +97,7 @@ The breadcrumb link text is truncated and ellipsed (...) when the text is longer
 
 - The breadcrumb component is typically location based to represent the site's navigational hierarchy as opposed to path based to illustrate a navigation trail.
 - The component displays on a page once a user has navigated away from the home page to provide a navigation path back to the home and parent level pages.
-- The breadcrumb should not include a link to the current page.
+- The breadcrumb lists the current page however this should not be linked.
 - Search engines have a limited understanding of content on web pages. By adding schema microdata tags to the breadcrumb component, you can help search engines and other applications better understand the content and display it in a useful and relevant way. For further information on schema, go to https://schema.org/
 
 ## Accessibility
