--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.docs.mdx
@@ -16,7 +16,8 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ## Overview
 
-Breadcrumbs are a horizontal list of links used to indicate the current page location within the information architecture (the first level always being the UQ homepage). Page links are separated by a chevron icon which indicates the level of that page relative to the page links beside it. Breadcrumbs are truncated and ellipsed (...) when the text is longer than a set width, however the current page crumb is not linked and always listed in full. UQ homepage is the base 
+Breadcrumbs are a horizontal list of links used to indicate the current page location within the information architecture (the first level always being the UQ homepage). Page links are separated by a chevron icon which indicates the level of that page relative to the page links beside it. Breadcrumbs are truncated and ellipsed (...) when the text is longer than a set width, however the current page crumb is not linked and always listed in full. UQ homepage is the base
+
 ## Default
 
 <Canvas withSource="none" withToolbar>
@@ -84,7 +85,7 @@ Breadcrumbs are a horizontal list of links used to indicate the current page loc
 
 ### Truncation
 
-When exceeding 4 breadcrumbs - the current page, parent, parent's parent and home crumbs will be shown with the additional crumbs collapsed behind an expand link. The full breadcrumb trail can then be viewed by clicking the expand crumb. *Note: only expand functionality is included, and cannot be collapsed again without a page refresh.*
+When exceeding 4 breadcrumbs - the current page, parent, parent's parent and home crumbs will be shown with the additional crumbs collapsed behind an expand link. The full breadcrumb trail can then be viewed by clicking the expand crumb. _Note: only expand functionality is included, and cannot be collapsed again without a page refresh._
 
 <Canvas withSource="none" withToolbar>
   <Story id="components-breadcrumb--breadcrumb-truncation" />
