update references from static.uq to fonts.google

--- a/packages/storybook-html/stories/components/core/typography.story.mdx
+++ b/packages/storybook-html/stories/components/core/typography.story.mdx
@@ -50,20 +50,14 @@ Copy the HTML or CSS below and paste it into your project to load design system 
 <link
   rel="stylesheet"
   type="text/css"
-  href="https://static.uq.net.au/v15/fonts/Roboto/roboto.css"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="https://static.uq.net.au/v15/fonts/Montserrat/montserrat.css"
+  href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap"
 />
 ```
 
 **CSS**
 
 ```css
-@import url("https://static.uq.net.au/v15/fonts/Roboto/roboto.css");
-@import url("https://static.uq.net.au/v15/fonts/Montserrat/montserrat.css");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap");
 ```
 
 ### Font stacks
